[JAVA-21] migrate sarlacc pit to Java 21